bug fixed menu z-index

--- a/modules/restricted/themes/responsive/css/ff.modules.restricted.css
+++ b/modules/restricted/themes/responsive/css/ff.modules.restricted.css
@@ -1139,7 +1139,7 @@ tbody > tr:hover {
     position: fixed;
     left: 0;
     top:0;
-    z-index: 4;
+    z-index: 12;
 }
 
 .sidemenu .navbar-nav{
